...
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/navigation_menu">
    </android.support.design.widget.BottomNavigationView>

    <!-- Layout to inflate the fragments in. -->
    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
